@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2856 2003/07/22 09:00:59 adam Exp $
+$NetBSD: CHANGES,v 1.2857 2003/07/22 10:14:16 agc Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2894,3 +2894,5 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated dbh to 1.0.15 [martti 2003-07-22]
 	Updated gtkmm to 2.2.5 [adam 2003-07-22]
 	Updated cvsync to 0.24.1 [gehenna 2003-07-22]
+	bsd.pkg.mk: record the shared object "provides" and "requires"
+		information [agc 2003-07-22]
